--- a/cdk/package.json
+++ b/cdk/package.json
@@ -9,20 +9,21 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
-    "aws-cdk": "1.143.0",
+    "aws-cdk": "1.147.0",
     "ts-node": "^9.0.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "1.143.0",
-    "@aws-cdk/aws-appsync": "1.143.0",
-    "@aws-cdk/aws-dynamodb": "1.143.0",
-    "@aws-cdk/aws-iam": "1.143.0",
-    "@aws-cdk/aws-lambda": "1.143.0",
-    "@aws-cdk/aws-s3": "1.143.0",
-    "@aws-cdk/aws-ec2": "1.143.0",
-    "@aws-cdk/aws-events": "1.143.0",
-    "@aws-cdk/aws-events-targets": "1.143.0",
-    "@aws-cdk/aws-lambda-event-sources": "1.143.0",
-    "@aws-cdk/core": "1.143.0"
+    "@aws-cdk/aws-apigateway": "1.147.0",
+    "@aws-cdk/aws-appsync": "1.147.0",
+    "@aws-cdk/aws-dynamodb": "1.147.0",
+    "@aws-cdk/aws-ec2": "1.147.0",
+    "@aws-cdk/aws-events": "1.147.0",
+    "@aws-cdk/aws-events-targets": "1.147.0",
+    "@aws-cdk/aws-iam": "1.147.0",
+    "@aws-cdk/aws-lambda": "1.147.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.147.0",
+    "@aws-cdk/aws-s3": "1.147.0",
+    "@aws-cdk/aws-ssm": "1.147.0",
+    "@aws-cdk/core": "1.147.0"
   }
 }
