--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "watch-bootstrapping-lambda": "yarn --cwd 'bootstrapping-lambda' watch 2>&1",
     "watch": "run-p --print-label watch-client watch-bootstrapping-lambda",
     "test": "yarn --cwd 'client' jest 2>&1",
-    "build": "wsrun --parallel --fast-exit --prefix --report build "
+    "build": "wsrun --parallel --fast-exit --prefix --report build ",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.19.2",
@@ -35,18 +36,13 @@
     "eslint": "^7.16.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.21.5",
-    "husky": ">=4",
+    "husky": "^7.0.0",
     "lint-staged": ">=10",
     "prettier": "2.2.1",
     "typescript": "^4.0.5",
     "wsrun": "^5.2.4",
     "yarn-deduplicate": "^3.1.0",
     "yarn-run-all": "^3.1.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && ((git diff --name-only --cached | grep 'yarn.lock') && yarn yarn-deduplicate) || true"
-    }
   },
   "lint-staged": {
     "**/*.{ts, tsx}": "eslint --fix",
