--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@graphql-codegen/cli": "1.19.2",
     "@graphql-codegen/introspection": "1.18.0",
     "@graphql-codegen/typescript": "1.17.11",
-    "@graphql-codegen/typescript-resolvers": "1.17.11",
     "@guardian/node-riffraff-artifact": "0.3.2",
     "@types/aws-lambda": "^8.10.93",
     "@types/jest": "^26.0.22",
@@ -47,6 +46,7 @@
     "prettier": "2.2.1",
     "prompts": "^2.4.2",
     "ts-jest": "^26.5.4",
+    "tsafe": "^1.0.1",
     "typescript": "^4.6.3",
     "wsrun": "^5.2.4",
     "yarn-deduplicate": "^3.1.0",
