--- a/cdk/package.json
+++ b/cdk/package.json
@@ -7,27 +7,17 @@
   "scripts": {
     "test": "tsc --noEmit & jest",
     "watch": "tsc --noEmit --watch & jest --watch",
-    "build": "cdk synth --path-metadata false --version-reporting false --app 'npx ts-node cdk.ts' > cloudformation.yaml",
+    "build": "cdk synth --path-metadata false --version-reporting false --app 'npx ts-node cdk.ts'",
     "update-snapshot": "jest -u"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.147.0",
-    "@types/node": "^14.14.7",
-    "aws-cdk": "1.147.0",
-    "ts-node": "^9.0.0"
+    "@types/node": "14.14.7",
+    "ts-node": "9.0.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "1.147.0",
-    "@aws-cdk/aws-appsync": "1.147.0",
-    "@aws-cdk/aws-dynamodb": "1.147.0",
-    "@aws-cdk/aws-ec2": "1.147.0",
-    "@aws-cdk/aws-events": "1.147.0",
-    "@aws-cdk/aws-events-targets": "1.147.0",
-    "@aws-cdk/aws-iam": "1.147.0",
-    "@aws-cdk/aws-lambda": "1.147.0",
-    "@aws-cdk/aws-lambda-event-sources": "1.147.0",
-    "@aws-cdk/aws-s3": "1.147.0",
-    "@aws-cdk/aws-ssm": "1.147.0",
-    "@aws-cdk/core": "1.147.0"
+    "@aws-cdk/aws-appsync-alpha": "2.38.1-alpha.0",
+    "aws-cdk": "2.38.1",
+    "aws-cdk-lib": "2.38.1",
+    "constructs": "10.1.83"
   }
 }
