--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,12 @@
       "jsx": true
     },
     "ecmaVersion": 12,
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "plugins": ["react", "@typescript-eslint", "node"],
   "rules": {
+    "@typescript-eslint/switch-exhaustiveness-check": "error",
     "@typescript-eslint/ban-ts-comment": "warn",
     "react/prop-types": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
