--- a/database-bridge-lambda/package.json
+++ b/database-bridge-lambda/package.json
@@ -7,7 +7,7 @@
     "type-check": "tsc --noEmit",
     "bundle": "esbuild src/index.ts --bundle --minify --outfile=dist/index.js --external:aws-sdk --platform=node",
     "build": "run-p --print-label type-check bundle",
-    "watch": "ts-node-dev --respawn run.ts"
+    "tunnel": "ts-node-dev run.ts"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.102",
