--- a/users-refresher-lambda/package.json
+++ b/users-refresher-lambda/package.json
@@ -7,7 +7,8 @@
     "type-check": "tsc --noEmit",
     "bundle": "esbuild src/index.ts --bundle --minify --outfile=dist/index.js --external:aws-sdk --platform=node",
     "watch": "ts-node-dev --respawn run.ts",
-    "build": "run-p --print-label type-check bundle"
+    "build": "run-p --print-label type-check bundle",
+    "testDb": "ts-node-dev src/test-db-output.ts"
   },
   "devDependencies": {
     "@types/iniparser": "^0.0.29",
