--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@guardian/node-riffraff-artifact": "0.3.2",
     "@types/aws-lambda": "^8.10.93",
     "@types/jest": "^26.0.22",
+    "@types/prompts": "^2.0.14",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "esbuild": "^0.14.18",
@@ -44,6 +45,7 @@
     "jest": "^26.6.3",
     "lint-staged": ">=10",
     "prettier": "2.2.1",
+    "prompts": "^2.4.2",
     "ts-jest": "^26.5.4",
     "typescript": "^4.6.3",
     "wsrun": "^5.2.4",
