--- a/users-refresher-lambda/package.json
+++ b/users-refresher-lambda/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/iniparser": "^0.0.29",
+    "@types/node-fetch": "2",
     "@types/node-forge": "^0.9.7",
     "aws-sdk": "^2.840.0",
     "ts-node-dev": "^1.0.0"
@@ -19,6 +20,7 @@
     "@googleapis/admin": "^5.1.0",
     "@googleapis/people": "^1.0.2",
     "iniparser": "^1.0.5",
+    "node-fetch": "2",
     "node-forge": "^1.3.0"
   }
 }
