--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "type-check": "tsc --noEmit",
+    "test": "jest --coverage",
     "bundle": "esbuild src/server.ts --bundle --minify --outfile=dist/index.js --external:aws-sdk --platform=node",
     "watch": "ts-node-dev --respawn local/index.ts",
     "build": "run-p --print-label type-check bundle"
@@ -15,6 +16,7 @@
     "@types/express": "^4.17.8",
     "@types/node-fetch": "^3.0.3",
     "aws-sdk": "^2.840.0",
+    "jest": "^29.3.1",
     "ts-node-dev": "^1.0.0"
   },
   "dependencies": {
