--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -12,6 +12,7 @@
     "build": "run-p --print-label type-check bundle"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@types/aws-serverless-express": "^3.3.3",
     "@types/express": "^4.17.8",
     "@types/node-fetch": "^3.0.3",
