--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -15,9 +15,12 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/aws-serverless-express": "^3.3.3",
     "@types/express": "^4.17.8",
+    "@types/jest": "^29.2.3",
     "@types/node-fetch": "^3.0.3",
     "aws-sdk": "^2.840.0",
     "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^1.0.0"
   },
   "dependencies": {
