--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "type-check": "tsc --noEmit",
-    "test": "jest --coverage",
+    "test": "jest --coverage --forceExit",
     "bundle": "esbuild src/server.ts --bundle --minify --outfile=dist/index.js --external:aws-sdk --platform=node",
     "watch": "ts-node-dev --respawn local/index.ts",
     "build": "run-p --print-label type-check bundle"
