pass the selected pinboard id to the hidden iframe, so the service worker can better select the tab to focus when there a multiple tabs open running pinboard, and scroll to and highlight the item in question

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,6 +8,10 @@
       "@types/jest",
       "@types/webpack-env"
     ],
-    "lib": ["esnext", "dom"]
+    "lib": [
+      "esnext",
+      "dom",
+      "webworker"
+    ]
   }
 }
