--- a/bootstrapping-lambda/package.json
+++ b/bootstrapping-lambda/package.json
@@ -16,7 +16,6 @@
     "@types/aws-serverless-express": "^3.3.3",
     "@types/express": "^4.17.8",
     "@types/jest": "^29.2.3",
-    "@types/node-fetch": "2",
     "aws-sdk": "^2.840.0",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
@@ -29,7 +28,6 @@
     "aws-serverless-express": "^3.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jose": "^4.3.7",
-    "node-fetch": "2.6.7"
+    "jose": "^4.3.7"
   }
 }
