--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "graphql": "^15.4.0",
     "preact": "^10.5.13",
     "react-draggable": "^4.4.5",
+    "react-joyride": "^2.5.3",
     "react-shadow": "^19.0.2"
   },
   "devDependencies": {
