--- a/cdk/package.json
+++ b/cdk/package.json
@@ -19,8 +19,8 @@
   },
   "dependencies": {
     "@aws-cdk/aws-appsync-alpha": "2.38.1-alpha.0",
-    "aws-cdk": "^2.50.0",
-    "aws-cdk-lib": "^2.50.0",
-    "constructs": "^10.1.154"
+    "aws-cdk": "2.64.0",
+    "aws-cdk-lib": "2.64.0",
+    "constructs": "10.1.249"
   }
 }
